--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -365,19 +365,21 @@ EstimateKmeans(t(campp2_brca_1_batchCorrected[1:2000,]))
 ### runKmeans
 **Description:** \
 A wrapper function for K-means clustering.
-For data sets with >1000 features, multiple subsets (number of sets = number
-of features/1000; rounded up to the higher integer) will be generated,
-maximum is 10 subsets. A number of randomly selected features (e.g. genes)
-in 1 subset is limited to 2000.
-A number of clusters for each sub set is automatically estimated (using
+By default, For data sets with >1000 features, multiple subsets (number of
+sets = number of features/1000; rounded up to the higher integer) will be
+generated, maximum is 10 sub-sets. A number of randomly selected features
+(e.g. genes) in 1 subset is limited to 2000. The values for number of subsets
+and size of the sub-sets might by defined manually. The option of using the
+whole dataset for the estimation of the number of the clusters is also available.
+By default, a number of clusters for each sub-set is automatically estimated (using
 mclustBIC function from mclust package) and a consensus (based on all the
 subsets) of best n k-means is returned and used for K-means clustering.
 If K-means estimation using BIC fails, a number of clusters will be based on
 the number of samples (2-6 clusters for data set with less than 100 samples;
 2-11 for data sets with 101-500 samples, and 2-16 clusters for data sets with
-more than 500 samples). The number of cluster can also be supplied manually.
+more than 500 samples). The number of clusters can also be supplied manually.
 As results, an information about the clusters assigned to each sample and
-results from PCA function (FactoMineR) are provided.
+results from PCA (FactoMineR) function are provided.
 The clusters are visualized on PCA plot and saved into .png file.
 Plot of BIC values for each of the sample sub-set is saved into .png file.
 A summary describing the best model is printed on the screen during
@@ -385,6 +387,20 @@ calculation.
 \
 **Parameters:** \
 *data* a data.frame of feature (e.g. gene) counts \
+*num.subsets* a number of sub-sets to be generated for the estimation of
+the number of clusters. This parameter has several options:
+1) a numeric (integer) value estimated by the user.
+2) a string "automatic" will let CAMPP2 estimate the number of the sub-sets.
+3) NULL option will use the whole set for the estimation
+of the number of clusters. If using this option, subset.size must be also NULL.
+Defaults is NULL. \
+*subset.size* a number of features included in each sub-set. This
+parameter has several options:
+1) a numeric (integer) value estimated by the user.
+2) a string "automatic" will let CAMPP2 estimate the size of the sub-sets.
+3) NULL option will use all the features (no sub-sampling) for the estimation
+of the number of clusters. If using this option, num.subsets must be also NULL.
+Defaults is "automatic" \
 *show.PCA.labels* s a boolean value (TRUE or FALSE) specifying if elements
 (e.g. samples) should be labelled in the PCA plot including information about
 the clusters. Labeling is based on column names of the input data.
@@ -397,10 +413,10 @@ If multiple values provided, the function will automatically
 perform K-means clustering based on each (expected number of clusters) of
 them separately. By default, expected numbers of clusters are calculated
 automatically based on BIC (mclust package) applied to sub-sampled data sets.
-A default value for this parameter is NULL.
-*seed* a seed for K-means clustering. Defaults is NULL.
+A default value for this parameter is NULL. \
+*seed* a seed for K-means clustering. Defaults is NULL. \
 *pca.scale* a boolean, if TRUE then data are scaled to unit variance
-during PCA. Default is FALSE
+during PCA. Default is FALSE \
 \
 **Output from the function:** \
 1) a list including: \
@@ -417,7 +433,7 @@ during PCA. Default is FALSE
 ##Estimate number of K-means and assign a specific cluster to each sample
 ```
 ###Normalized and batch corrected data ("campp2_brca_1_batchCorrected" generated in a previous step) are used as an input.
-Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected[1:2000,], show.PCA.labels = FALSE, colors=NULL, prefix="test", num.km.clusters=NULL, seed=123, pca.scale=FALSE)
+Kmeans.output<-runKmeans(campp2_brca_1_batchCorrected[1:2000,], num.subsets= NULL, subset.size=NULL, show.PCA.labels = FALSE, colors=NULL, prefix="test", num.km.clusters=NULL, seed=123, pca.scale=FALSE)
 ```
 
 
