--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -340,9 +340,164 @@ PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), sho
 ```
 \
 
-
-
+### RunDEA
+**Description:** \
+A function for running differential expression/abundance
+analysis using a matrix of features (e.g., genes) counts as a mandatory
+input. In the function, user is allowed to take advantage of defining multiple
+covariates, thresholds for a log fold change (logFC), a false discovery
+rate (FDR) and a blocking variable.
+The differential expression/abundance analysis is based on voom
+transformation and limma.
+Results are provided in the form of tables with differentially expressed/
+abundant features. Design a contrast matrices are also provided.
+\
+**Parameters:** \
+*data* a raw feature count matrix from "seq", "array", "ms" or "other"
+technology (with feature IDs as row names and sample IDs as columns). It's
+recommended to import feature counts using function "import_counts". \
+*metadata* a samples' metadata table should be imported using function
+"import_metadata". Metadata must include exactly the same samples as gene
+counts (data) and samples must be sorted similarly. In this function,
+metadata are optional and are used to extract covariates for each sample.
+Default = NULL. \
+*batch* a factor specifying batch for each sample (e.g. could be
+represented by a column from a metadata file). Default = NULL. \
+*covarDEA* a character vector of covariate(s) to include in the analysis.
+covarDEA can be defined only together with a batch parameter (which
+represents one of the covariates). Default = NULL. \
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file) \
+*cutoff.logFC* A cutoff value for the logarithmic fold change applied
+to each feature. Default = 1. \
+*cutoff.FDR* a cutoff value for the false discovery rate (corrected
+p-value) applied to each feature. Default = 0.01. \
+*prefix* a character vector defining prefix of output file name. \
+*block* a factor specifying blocking variable. The block must be of
+the same length as data and contain 2 or more options (e.g. could be
+represented by a column from a metadata file). Default = NULL. \
+**Output from the function:** \
+a list of:
+1) re-formatted matrix of differential expression/abundance results from
+limma.
+2) original results (a list) from limma
+3) a character vector with unique feature names
+4) a design matrix
+5) a contrast matrix
+\
+**An example run:** \
+##Run a wrapper for differential gene expression analysis on a raw gene counts
+```
+campp2_brca_1_DEA<-RunDEA(data=campp2_brca_1, metadata=campp2_brca_1_meta,
+group=campp2_brca_1_meta$subtype, prefix="test",
+block=campp2_brca_1_meta$subtype, batch=campp2_brca_1_meta$age,
+covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.01)
+```
+\
  
+ 
+### DEAFeatureApply
+**Description:** \
+A function for applying differential expression/abundance
+analysis to all group comparisons at once. The analysis is based on feature
+counts (e.g., genes), design matrix and contrast matrix. Cutoffs for logFC
+and FDR; and blocking variable are optional. Using parameter vector=TRUE, only
+features' IDs are output.
+\
+**Parameters:** \
+*data* a raw feature count matrix from "seq", "array", "ms" or "other"
+technology (with feature IDs as row names and sample IDs as columns). It's
+recommended to import feature counts using function "import_counts". \
+*design.matrix* a design matrix based on samples metadata (groups, covariates,
+etc.). \
+*contrast.matrix* an array containing contrast.matrix between groups of
+interest. \
+*cutoff.logFC* A cutoff value for the logarithmic fold change applied
+to each feature. Default = 1. \
+*cutoff.FDR* a cutoff value for the false discovery rate (corrected
+p-value) applied to each feature. Default = 0.01. \
+*block* a factor specifying blocking variable. The block must be of
+the same length as data and contain 2 or more options (e.g. could be
+represented by a column from a metadata file). Default = NULL. \
+*vector* a boolean value. If TRUE, only a vector of unique features IDs
+will be output. Default = FALSE. \
+**Output from the function:** \
+a list (a vector in case vector=TRUE) of DEA features for all
+comparisons\
+\
+**An example run:** \
+## Run differential gene expression on all groups comparasons
+```
+DEAFeatureApply(data = campp2_brca_1, design.matrix =
+campp2_brca_1_DEA$DEA.design.matrix, contrast.matrix =
+campp2_brca_1_DEA$DEA.contrast.matrix, cutoff.logFC =1, cutoff.FDR =0.01,
+block = campp2_brca_1_meta$subtype, vector = FALSE)
+```
+\
+ 
+ 
+### DEA_feature
+ **Description:** \
+A function for applying differential expression/abundance
+analysis using voom transform and limma. The analysis is based on feature
+counts (e.g., genes), design matrix and contrast matrix (using only 1
+contrast of two groups). Cutoffs for logFC and FDR, and blocking variable are
+optional. \
+\
+**Parameters:** \
+*contrast.matrix* an array containing contrast.matrix between groups of
+interest. \
+*data* a raw feature count matrix from "seq", "array", "ms" or "other"
+technology (with feature IDs as row names and sample IDs as columns). It's
+recommended to import feature counts using function "import_counts". \
+*design.matrix* a design matrix based on samples metadata (groups, covariates,
+etc.). \
+*cutoff.logFC* A cutoff value for the logarithmic fold change applied
+to each feature. Default = 1. \
+*cutoff.FDR* a cutoff value for the false discovery rate (corrected
+p-value) applied to each feature. Default = 0.01. \
+*block* a factor specifying blocking variable. The block must be of
+the same length as data and contain 2 or more options (e.g. could be
+represented by a column from a metadata file). Default = NULL. \
+**Output from the function:** \
+a list of up and donw-regulated features in limma format
+\
+**An example run:** \
+##Run differential gene expression on the first group comparison (using 1st 
+column from provided contrast matrix).
+```
+DEAFeature(contrast.matrix = campp2_brca_1_DEA$DEA.contrast.matrix[,1],
+data = campp2_brca_1, design.matrix = campp2_brca_1_DEA$DEA.design.matrix,
+cutoff.logFC =1, cutoff.FDR =0.01, block = campp2_brca_1_meta$subtype)
+```
+\
+
+
+### ExportDEA
+ **Description:** \
+A function for re-formatting the output from DEA generated based
+on the workflow: (runDEA - DEAFeatureApply - DEAFeature - limma); and 
+exporting the results into a .txt file. \
+**Parameters:** \
+*res.DEA* a list of data frames containing results from different group
+comparisons in limma format.
+*prefix* a character vector defining prefix of output file name. \
+**Output from the function:** \
+1) a data frame of DEA results \
+2) a .txt table of exported DEA results \
+\
+**An example run:** \
+##Reformat and export results from DEA generated by limma in DEA_feature 
+function
+```
+campp2_brca_1_DEA_out<-ExportDEA(res.DEA = campp2_brca_1_DEA$res.DEA,
+prefix="test")
+```
+
+
+
+
+
 ================================================================================================
 (THE REST WILL BE CONSIDERED - WE CAN USE SOME INFO TO BETTER DESCRIBE THE ARGUMENTS ABOVE)
 **1. Quantitative data (counts) **: An .xlsx (or .txt) file containing feature expression/abundance.
