--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -299,6 +299,144 @@ a list including matrix (array) of batch corrected feature counts \
 ###Normalized data ("campp2_brca_1_normalized" generated in a previous step) are used as an input.
 campp2_brca_1_batchCorrected<-BatchCorrect(data=campp2_brca_1_normalized,batch=campp2_brca_1_meta$tumor_stage,group=campp2_brca_1_meta$diagnosis,technology="seq") 
 ```
+\
+
+
+### runLASSO
+**Description:** \
+The function runs LASSO/Elastic net/Ridge regression (depending
+on a hyperparameter alpha value. For Ridge regression, alpha = 0;
+for Elastic net, alpha >0 & <1; for LASSO, alpha = 1).
+The regression is calculated 10 times for 10 random seeds and the intersect
+of the significant features (e.g., genes) is obtained.
+Parameter Lambda is automatically
+estimated using k-fold cross-validation (cv.glmnet) by default.
+The function optionally (>20 samples) calculates a double
+cross-validation using a validation set which represents 1/4 of the samples
+from each group. \
+Results are provided in the form of: \
+1) the names of the significant features passing filters based on their
+coefficient values \
+2) classification error rate (datasets of >20 samples) \
+3) roc.res - AUC value (datasets of >20 samples) \
+4) cross validation error plot \
+ \
+**Parameters:** \
+*data* a data frame of expression/abundance counts. It's recommended
+to use normalized and batch corrected data. \
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file) \
+*alpha* a numeric vector specifying hyperparameter alpha. This value
+must be set to 0.0 < x < 1.0 for Elastic Net (0.5 is default) or to 1.0
+for LASSO regression or to 0.0 for Ridge regression. \
+*min.coef* a numeric vector specifying a threshold for features'
+filtering (e.g. genes) based on the coefficients which are calculated during
+model fitting. Default value is > 0. \
+*nfolds* a numeric vector describing number of folds during Lambda
+estimation which is based on a cross-validation. Although nfolds can be
+as large as the sample size (leave-one-out CV), it is not recommended for
+large datasets. Smallest value allowable is nfolds=3. Default is 10.
+*prefix* a character string defining a prefix of output file. \
+**Output from the function:** \
+1) VarSelect - a matrix of feature names having coefficients of best model
+passing the filters (threshold defined by min.coef) \
+2) cv.error - logical/numeric value describing miss classification error
+rate (datasets of >20 samples) \
+3) roc.res - AUC value (datasets of >20 samples) \
+4) cross validation error plot \
+**An example run:** \
+
+##Run a wrapper of Ridge/elastic net/LASSO regression
+```
+###Normalized and batch corrected data are used as an input for regression.
+##run regression using small batch corrected dataset - no double cross validation
+runLASSO(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$diagnosis, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
+##run regression using large batch corrected dataset suitable for double cross validation
+campp_test_data_LASSO<-cbind(campp2_brca_1_batchCorrected,campp2_brca_2_batchCorrected)
+campp_test_metadata_LASSO<-c(campp2_brca_1_meta$diagnosis, campp2_brca_2_meta$diagnosis)
+runLASSO(data=campp_test_data_LASSO, group=campp_test_metadata_LASSO, alpha=0.5, min.coef=0, nfolds=10, prefix="test")
+}
+```
+\
+
+
+### LASSOFeature
+**Description:** \
+The function runs LASSO/Elastic net/Ridge regression
+(depending on a hyperparameter alpha value). Parameter Lambda is
+automatically estimated using k-fold cross-validation (cv.glmnet) by default.
+The function optionally calculates also double cross-validation using
+a test set. aValidation (test) set represents 1/4 of the samples from each
+group. \
+Results are provided in the form of:
+1) the ames of the signifficant features passing filters based on their
+coefficient values \
+2) classification error rate (calculated if "validation=TRUE") \
+3) cv.glmnet object. \
+ \
+**Parameters:** \
+*seed* an integer vector containing the random number generator (RNG)
+state. Default is 123. \
+*data* a data frame of expression/abundance counts.
+It's recommended to use normalized and batch corrected data. \
+*group* a factor specifying group for each sample (e.g. could be
+represented by a column from a metadata file) \
+*alpha* a numeric vector specifying hyperparameter alpha. This value
+must be set to 0.0 < x < 1.0 for Elastic Net (0.5 is default) or to 1.0 for
+LASSO regression or to 0.0 for Ridge regression. \
+*validation* a boolean value for performing double cross-validation.
+Validation (test) set represents 1/4 of the samples in each group.
+As a result, cross validation error rate is provided. Default value is FALSE. \
+*min.coef* a numeric vector specifying a threshold for features'
+filtering (e.g. genes) based on the coefficients which are calculated during
+model fitting. Default value is > 0. \
+*nfolds* a numeric vector describing number of folds during Lambda
+estimation which is based on a cross-validation. Although nfolds can be
+as large as the sample size (leave-one-out CV), it is not recommended for
+large datasets. Smallest value allowable is nfolds=3. Default is 10. \
+**Output from the function:** \
+a list of:
+1) coef.ma - a matrix of feature names having coefficients of best model
+passing the filters (threshold defined by min.coef)
+2) class.error - logical/numeric value describing miss classification error
+rate
+3) fit - cv.glmnet object \
+**An example run:** \
+
+##Run Ridge/elastic net/LASSO regression
+```
+###Normalized and batch corrected data are used as an input for regression.
+LASSOFeature(seed=123, data=campp2_brca_1_batchCorrected,
+group=campp2_brca_1_meta$diagnosis, alpha=0.5, validation=TRUE,
+min.coef = 0, nfolds=10)
+```
+\
+
+
+### RunDEA_LASSO_consensus
+**Description:** \
+This function creates a consensus between the results from
+DEA and LASSO/Elastic net/Ridge regression. Specifically, only the features
+present in LASSO results are kept in the DEA results table.
+Additionally, a Venn diagram visualizing overlaps is generated.
+\
+**Parameters:** \
+*DEA.out* a data frame from RunDEA containing features and their
+corresponding AveExpr, logFC, p.value, adj.p.value ect. Mandatory column
+is "name" \
+*LASSO.results* an object generated by runLASSO function \
+*group* a factor specifying group for each sample (e.g. could be represented by a column from a metadata file) \
+*viridis.palette* a character vector specifying color gradient to use for
+the heatmap. Default option for viridis color palettes is 'turbo'. For more
+options, see viridis vignette. \
+*prefix* a character string defining a prefix of output file. \
+**Output from the function:** \
+a list of:
+1) a data frame of features common for both DEA and LASSO which are extracted
+from DEAout table
+2) a .png with a venn diagram of features' intersections between DEA and LASSO
+**An example run:** \
+\
 
 
 
