--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -353,9 +353,9 @@ Results are provided in the form of tables with differentially expressed/
 abundant features. Design a contrast matrices are also provided.
 \
 **Parameters:** \
-*data* a raw feature count matrix from "seq", "array", "ms" or "other"
-technology (with feature IDs as row names and sample IDs as columns). It's
-recommended to import feature counts using function "import_counts". \
+*data* a matrix of (transformed and normalized) feature counts from "seq", "array", "ms" or 
+"other" technology (with feature IDs as row names and sample IDs as columns). 
+\
 *metadata* a samples' metadata table should be imported using function
 "import_metadata". Metadata must include exactly the same samples as gene
 counts (data) and samples must be sorted similarly. In this function,
@@ -388,7 +388,8 @@ limma.
 **An example run:** \
 ##Run a wrapper for differential gene expression analysis on a raw gene counts
 ```
-campp2_brca_1_DEA<-RunDEA(data=campp2_brca_1, metadata=campp2_brca_1_meta,
+campp2_brca_1_DEA<-RunDEA(data=campp2_brca_1_normalized, 
+metadata=campp2_brca_1_meta,
 group=campp2_brca_1_meta$subtype, prefix="test",
 block=campp2_brca_1_meta$subtype, batch=campp2_brca_1_meta$age,
 covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.01)
@@ -405,9 +406,9 @@ and FDR; and blocking variable are optional. Using parameter vector=TRUE, only
 features' IDs are output.
 \
 **Parameters:** \
-*data* a raw feature count matrix from "seq", "array", "ms" or "other"
-technology (with feature IDs as row names and sample IDs as columns). It's
-recommended to import feature counts using function "import_counts". \
+*data* a matrix of (transformed and normalized) feature counts from "seq", "array", "ms" or 
+"other" technology (with feature IDs as row names and sample IDs as columns). 
+\
 *design.matrix* a design matrix based on samples metadata (groups, covariates,
 etc.). \
 *contrast.matrix* an array containing contrast.matrix between groups of
@@ -428,8 +429,8 @@ comparisons\
 **An example run:** \
 ## Run differential gene expression on all groups comparasons
 ```
-DEAFeatureApply(data = campp2_brca_1, design.matrix =
-campp2_brca_1_DEA$DEA.design.matrix, contrast.matrix =
+DEA_all_comparisons <- DEAFeatureApply(data = campp2_brca_1_normalized, 
+design.matrix = campp2_brca_1_DEA$DEA.design.matrix, contrast.matrix =
 campp2_brca_1_DEA$DEA.contrast.matrix, cutoff.logFC =1, cutoff.FDR =0.01,
 block = campp2_brca_1_meta$subtype, vector = FALSE)
 ```
@@ -439,17 +440,16 @@ block = campp2_brca_1_meta$subtype, vector = FALSE)
 ### DEA_feature
  **Description:** \
 A function for applying differential expression/abundance
-analysis using voom transform and limma. The analysis is based on feature
+analysis using limma. The analysis is usually based on normalized feature
 counts (e.g., genes), design matrix and contrast matrix (using only 1
-contrast of two groups). Cutoffs for logFC and FDR, and blocking variable are
-optional. \
+contrast). Cutoffs for logFC and FDR; and blocking variable are optional. \
 \
 **Parameters:** \
 *contrast.matrix* an array containing contrast.matrix between groups of
 interest. \
-*data* a raw feature count matrix from "seq", "array", "ms" or "other"
-technology (with feature IDs as row names and sample IDs as columns). It's
-recommended to import feature counts using function "import_counts". \
+*data* a matrix of (transformed and normalized) feature counts from "seq", "array", "ms" or 
+"other" technology (with feature IDs as row names and sample IDs as columns). 
+\
 *design.matrix* a design matrix based on samples metadata (groups, covariates,
 etc.). \
 *cutoff.logFC* A cutoff value for the logarithmic fold change applied
@@ -460,14 +460,16 @@ p-value) applied to each feature. Default = 0.01. \
 the same length as data and contain 2 or more options (e.g. could be
 represented by a column from a metadata file). Default = NULL. \
 **Output from the function:** \
-a list of up and donw-regulated features in limma format
+a list of up and down-regulated features in limma format
 \
 **An example run:** \
 ##Run differential gene expression on the first group comparison (using 1st 
 column from provided contrast matrix).
 ```
+DEA_one_comparison <- 
 DEAFeature(contrast.matrix = campp2_brca_1_DEA$DEA.contrast.matrix[,1],
-data = campp2_brca_1, design.matrix = campp2_brca_1_DEA$DEA.design.matrix,
+data = campp2_brca_1_normalized, 
+design.matrix = campp2_brca_1_DEA$DEA.design.matrix,
 cutoff.logFC =1, cutoff.FDR =0.01, block = campp2_brca_1_meta$subtype)
 ```
 \
@@ -583,15 +585,24 @@ intersections of the features present each group
 *groups.feature.list* A list of character vectors (each character
 vector named by its group name, e.g., "LumA") including feature names
 characteristic for each group of interest (e.g., for subtype). \
+*label* a character vector used as a label for the upset plot. Default
+is "". \
+*label.vertical.position* a numeric value describing vertical position of
+the label. Default is 15.0 (cm). \
+*y.axis.by* an integer describing interval used for labeling Y-axis.
+Defaults is 100. \
+*set.size.by* an integer describing interval used for labeling the
+set size axis. Defaults is 200. \
 **Output from the function:** \
 An Upset plot showcasing the size of intersections of the features between the 
 sample groups \
 \
 **An example run:** \
-##Create an Upset plot based on a list of the features characteristic for each 
-group
+##Create an Upset plot based on a list of the features characteristic for each group
 ```
-MakeUpset("testUpset",campp2_brca_1_DEA_HUGO_features_per_group)
+MakeUpset("testUpSet",campp2_brca_1_DEA_HUGO_features_per_group,
+label="test_UpSet",label.vertical.position=16.5,
+y.axis.by=300,set.size.by=250)
 ```
 \
 
