--- a/vignette_campp2.Rmd
+++ b/vignette_campp2.Rmd
@@ -345,30 +345,30 @@ PCAPlot(campp2_brca_1_batchCorrected, as.factor(campp2_brca_1_meta$subtype), sho
 
 ### runKmeans
 **Description:** \
-#' A wrapper function for K-means clustering.
-#' In a first step, a number of clusters is estimated.
-#' By default, for data sets with >1000 features, multiple
-#' subsets (number of sets = number of features/1000; rounded up to the higher
-#' integer) will be generated, maximum is 10 sub-sets.
-#' A number of randomly selected features (e.g. genes) in 1 subset is limited
-#' to 2000. The values for number of subsets and size of the sub-sets might by
-#' defined manually. The option of using the whole dataset for the estimation
-#' of the number of the clusters is also available. By default, a number of
-#' clusters for each sub-set is automatically estimated (using
-#' mclustBIC function from mclust package) and a consensus (based on all the
-#' subsets) of best n k-means is returned and used for K-means clustering.
-#' If K-means estimation using BIC fails, a number of clusters will be based on
-#' the number of samples (2-6 clusters for data set with less than 100 samples;
-#' 2-11 for data sets with 101-500 samples, and 2-16 clusters for data sets with
-#' more than 500 samples). The number of clusters can also be supplied manually.
-#' In the next step, K-means clustering using the information about the number
-#' of clusters is done.
-#' As results, an information about the clusters assigned to each sample and
-#' results from PCA (FactoMineR) function are provided.
-#' The clusters are visualized on PCA plot and saved into .png file.
-#' Plot of BIC values for each of the sample sub-set is saved into .png file.
-#' A summary describing the best model is printed on the screen during
-#' calculation.
+A wrapper function for K-means clustering.
+In a first step, a number of clusters is estimated.
+By default, for data sets with >1000 features, multiple
+subsets (number of sets = number of features/1000; rounded up to the higher
+integer) will be generated, maximum is 10 sub-sets.
+A number of randomly selected features (e.g. genes) in 1 subset is limited
+to 2000. The values for number of subsets and size of the sub-sets might by
+defined manually. The option of using the whole dataset for the estimation
+of the number of the clusters is also available. By default, a number of
+clusters for each sub-set is automatically estimated (using
+mclustBIC function from mclust package) and a consensus (based on all the
+subsets) of best n k-means is returned and used for K-means clustering.
+If K-means estimation using BIC fails, a number of clusters will be based on
+the number of samples (2-6 clusters for data set with less than 100 samples;
+2-11 for data sets with 101-500 samples, and 2-16 clusters for data sets with
+more than 500 samples). The number of clusters can also be supplied manually.
+In the next step, K-means clustering using the information about the number
+of clusters is done.
+As results, an information about the clusters assigned to each sample and
+results from PCA (FactoMineR) function are provided.
+The clusters are visualized on PCA plot and saved into .png file.
+Plot of BIC values for each of the sample sub-set is saved into .png file.
+A summary describing the best model is printed on the screen during
+calculation.
 \
 **Parameters:** \
 *data* a data.frame of feature (e.g. gene) counts \
@@ -753,13 +753,21 @@ represented by a column from a metadata file). Group's information
 will be used in clustering the samples. \
 *heatmap.size* an argument specifying how many genes will be selected
 to be plotted on the heatmap if plot.heatmap is TRUE. The input must be
-specified as an even number. \
+specified as an even number.
+
+Please, consider that some of the TOP DEA features might be present multiple 
+times in the DEA output due to the multiple groups comparisons. 
+On the heatmap, each feature will be projected only once so the final number 
+of the projected features migh by lower then heatmap.size.\
 *viridis.palette* a character vector specifying color gradient to use for
 the heatmap. Default option for viridis color palettes is 'turbo'. For more
 options, see viridis vignette. \
 *plot.heatmap* an argument defining which data will be used for
 the selection of the top x features to be plotted on the heatmap.
-Options are:"DEA", "LASSO", "EN" or "Consensus". \
+Options are:"DEA", "LASSO", "EN", "Ridge" or "Consensus". \
+*prefix* a character vector defining prefix of output file name.
+*data.type* a character vector for labeling units in the legend.
+Default is "expression/abundance".
 **Output from the function:** \
 a .png file with a heatmap \
 \
@@ -791,7 +799,7 @@ will be used in clustering the samples. \
 the heatmap. Default option for viridis color palettes is 'turbo'. For more
 options, see viridis vignette. \
 *data.type* a character vector (used in the heatmap legend) describing
-type of the data being visualized. Default = "Feature counts". \
+type of the data being visualized. Default is "expression/abundance". \
 **Output from the function:** \
 a .png file with a heatmap \
 \
@@ -799,7 +807,7 @@ a .png file with a heatmap \
 ##Create and print heatmap based on the raw gene counts 
 ```
 MakeHeatmap(data=campp2_brca_1_batchCorrected, group=campp2_brca_1_meta$subtype, 
-prefix="test_heatmap", viridis.opt = "turbo", data.type = "Feature counts")
+prefix="test_heatmap", viridis.opt = "turbo", data.type = "expression/abundance")
 
 ```
 \
@@ -945,8 +953,22 @@ options, see viridis vignette. \
 a list of:
 1) a data frame of features common for both DEA and LASSO which are extracted
 from DEAout table \
-2) a .png with a venn diagram of features' intersections between DEA and LASSO \
+2) a .png with a Venn diagram of features' intersections between DEA and LASSO \
 **An example run:** \
+
+```
+##here we prepare DEA results compatible (group="diagnosis) with
+EN/LASS/Ridge regression results:
+campp2_brca_1_DEA_diagnosis<-RunDEA(data=campp2_brca_1_normalized,
+metadata=campp2_brca_1_meta,
+group=campp2_brca_1_meta$diagnosis, prefix="test", batch=campp2_brca_1_meta$age,
+covarDEA = c("tumor_stage"), cutoff.logFC=1, cutoff.FDR=0.01)
+##here we run RunDEA_LASSO_consensus function:
+campp2_brca_1_DEA_LASSO_consensus <- RunDEA_LASSO_consensus(
+campp2_brca_1_DEA_diagnosis$DEA.out,
+campp2_brca_1_LASSO, group=campp2_brca_1_meta$diagnosis,
+viridis.palette="turbo", "test")
+```
 \
 
 
